[fix] Fix axes properties popover  and progress bar overlapping
- apply correct z-index styles

--- a/aim/web/ui/src/components/AxesPropsPopover/AxesPropsPopover.scss
+++ b/aim/web/ui/src/components/AxesPropsPopover/AxesPropsPopover.scss
@@ -37,19 +37,4 @@
       margin-right: $space-xs;
     }
   }
-
-  &__autocomplete__popper {
-    .MuiAutocomplete-groupLabel {
-      color: $text-color-50;
-      font-size: $text-sm;
-      font-weight: 500;
-      border-top: $border-separator;
-    }
-
-    .MuiAutocomplete-option[aria-selected="true"] {
-      .SelectDropdown__option__label {
-        color: $primary-color;
-      }
-    }
-  }
 }
