--- a/aim/web/ui/src/components/ProgressBar/ProgressBar.scss
+++ b/aim/web/ui/src/components/ProgressBar/ProgressBar.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   background-color: white;
-  z-index: 4;
+  z-index: 9;
   opacity: 1;
   transform: translateY(0);
   left: $space-xxxxs;
