--- a/aim/web/ui/src/components/kit/SelectDropdown/SelectDropdown.scss
+++ b/aim/web/ui/src/components/kit/SelectDropdown/SelectDropdown.scss
@@ -1,6 +1,22 @@
 @use 'src/styles/abstracts' as *;
 
 .SelectDropdown {
+  position: relative;
+  &__popper {
+    z-index: 5;
+    .MuiAutocomplete-groupLabel {
+      color: $text-color-50;
+      font-size: $text-sm;
+      font-weight: 500;
+      border-top: $border-separator;
+    }
+
+    .MuiAutocomplete-option[aria-selected="true"] {
+      .SelectDropdown__option__label {
+        color: $primary-color;
+      }
+    }
+  }
   &__groupItem {
     padding: $space-xxs $space-sm;
     width: 100%;
